--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learn-react",
   "version": "1.0.0",
   "description": "An educational project to learn React and related technogies.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
