--- a/package.json
+++ b/package.json
@@ -15,5 +15,17 @@
   "bugs": {
     "url": "https://github.com/avkom/learn-react/issues"
   },
-  "homepage": "https://github.com/avkom/learn-react#readme"
+  "homepage": "https://github.com/avkom/learn-react#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.6.0"
+  },
+  "dependencies": {
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  }
 }
