--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
     "webpack": "^4.6.0"
   },
   "dependencies": {
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "redux": "^4.0.0"
   }
 }
