--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An educational project to learn React and related technogies.",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +24,8 @@
     "babel-preset-env": "^1.6.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.3"
   },
   "dependencies": {
     "react": "^16.3.2",
