--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
+    "npm": "^6.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
