--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An educational project to learn React and related technogies.",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack -w",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
