--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jest": "^22.4.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "npm": "^6.0.1",
