--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learn-react",
   "version": "1.0.0",
-  "description": "An educational project to learn React and related technogies.",
+  "description": "An educational project to learn React and related technologies.",
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server",
